force-app/main/default/objects/PolicyPaymentScheduleEntry__c/PolicyPaymentScheduleEntry__c.object-meta.xml
<CustomObject>
    <label>Policy Payment Schedule Entry</label>
    <nameField>
        <label>Nom de l&apos;appel de cotisation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Payment Schedule Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>