force-app/main/default/objects/PolicyPaymentScheduleEntry__c/fields/Motif__c.field-meta.xml
<CustomField>
    <fullName>Motif__c</fullName>
    <label>Motif</label>
    <length>255</length>
    <type>Text</type>
</CustomField>