force-app/main/default/objects/PolicyPaymentScheduleEntry__c/fields/PolicyTransaction__c.field-meta.xml
<CustomField>
    <fullName>PolicyTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>vlocity_ins__AssetTransaction__c</referenceTo>
    <relationshipName>PolicyPaymentScheduleEntries</relationshipName>
    <type>Lookup</type>
</CustomField>