force-app/main/default/objects/PolicyPaymentScheduleEntry__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
                <label>Payé</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>Rejeté</label>
            </value>
            <value>
                <fullName>In progress</fullName>
                <label>En attente de règlement</label>
            </value>
            <value>
                <fullName>Impayé</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
                <label>Abandonné</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>